Fixed overflow activity log

--- a/src/app/modules/admin/monitor/component/activity-log/activity-log.component.scss
+++ b/src/app/modules/admin/monitor/component/activity-log/activity-log.component.scss
@@ -1,4 +1,5 @@
 .container {
     display: grid;
     grid-template-columns: 130px 1fr;
+    overflow-x: scroll;
 }
